css/theme/local-theme.css
/* ... */
nav#block-codetasks ul.menu li:hover {
  background-color: #ededed;
}

nav#block-codetasks ul.menu li a {
  font-weight: 500;
  color: #671e30;
  font-size: 85%;
  padding: 5px 16px 6px;
}

nav#block-codetasks ul.menu li a:before {
  content: none;
}

nav#block-codetasks ul.menu li.menu-item--expanded ul {
  display: none;
  position: absolute;
  clear: both;
  background-color: white;
  padding: 0;
  border: 1px solid #ccc;
  min-width: 180px;
}

nav#block-codetasks ul.menu li.menu-item--expanded ul.menu li {
  border: none;
  width: 100%;
}

nav#block-codetasks ul.menu li.menu-item--expanded:hover > ul {
  display: block;
  z-index: 9999;
}

/* Second Code Tasks Menu */

nav.menu--second-code-tasks {
  margin-top: 20px;
}

nav.menu--second-code-tasks ul.menu li {
  float: left;
  border: 2px solid black;
  margin-right: 10px;
  border-radius: 7px;
}

nav.menu--second-code-tasks ul.menu li:hover {
  background-color: #ededed;
}

nav.menu--second-code-tasks ul.menu li a {
  font-weight: 500;
  color: #671e30;
  font-size: 85%;
  padding: 5px 16px 6px;
}

nav.menu--second-code-tasks ul.menu li a:before {
  content: none;
}

/* Document Tasks Menu */
h2#block-documenttasks-menu {
  display: none;
}

nav#block-documenttasks h2#block-documenttasks-menu {
  border: none;
}

nav#block-documenttasks ul.menu li {
  float: left;
  border: 2px solid black;
  margin-right: 10px;
  border-radius: 7px;
}

nav#block-documenttasks ul.menu li:hover {
  background-color: #ededed;
}

nav#block-documenttasks ul.menu li a {
  font-weight: 500;
  color: #671e30;
  font-size: 85%;
  padding: 5px 16px 6px;
}

nav#block-documenttasks ul.menu li a:before {
  content: none;
}

nav#block-documenttasks ul.menu li.menu-item--expanded ul {
  display: none;
  position: absolute;
  clear: both;
  background-color: white;
  padding: 0;
  border: 1px solid #ccc;
  min-width: 180px;
}

nav#block-documenttasks ul.menu li.menu-item--expanded ul.menu li {
  border: none;
  width: 100%;
}

nav#block-documenttasks ul.menu li.menu-item--expanded:hover > ul {
  display: block;
  z-index: 9999;
}

/* Second Document Tasks Menu */

nav.menu--second-document-tasks {
  margin-top: 20px;
}

nav.menu--second-document-tasks ul.menu li {
  float: left;
  border: 2px solid black;
  margin-right: 10px;
  border-radius: 7px;
}

nav.menu--second-document-tasks ul.menu li:hover {
  background-color: #ededed;
}

nav.menu--second-document-tasks ul.menu li a {
  font-weight: 500;
  color: #671e30;
  font-size: 85%;
  padding: 5px 16px 6px;
}

nav.menu--second-document-tasks ul.menu li a:before {
  content: none;
}

/* browse vocabulary list styles */
div.view-vocabulary-lists div.view-header h2 {
  margin-top: -0.75em;
}

/* Subfooter Styles */
p#subfooter-disclaimer {
  font-size: 90%;
}

p#subfooter-sponsor {
  float: right;
}

p#subfooter-disclaimer a:hover,
p#subfooter-disclaimer a:focus,
p#subfooter-sponsor a:hover,
p#subfooter-sponsor a:focus {
  text-decoration: underline;
}

/* Cookie Alert Styles */
div.eu-cookie-compliance-message {
  line-height: 13px;
  padding: 10px 0px;
}

div.eu-cookie-compliance-message p {
  font-weight: 200;
}

div.eu-cookie-compliance-message p span {
  font-weight: 500;
}

div.eu-cookie-compliance-message a {
  color: white;
}

/* Profile Form Styles */
div.webform-multiple-table tr.even td {
  background-color: #ededed;
}

/* Layout Paragraph Overrides */
div.paragraph--type--section-using-layout-paragraphs .layout--twocol-section {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

div.paragraph--type--section-using-layout-paragraphs .layout--twocol-section .layout__region {
  flex: 0 1 49%;
}

.paragraph--type--section-using-layout-paragraphs hr {
  border-top: 2px solid #ebebeb;
  margin: 10px 20px 10px 0px;
}

